# POET

./: .gitignore  AUTHORS  ChangeLog  Make.inc  Makefile  Makefile.am  Makefile.in  README  README.md  bug-track.txt  config.status  configure  configure.ac  configure~  post_doc.sh  post_release.sh
doc/: Makefile  Makefile.am  Makefile.in  manual.aux  manual.out  manual.tex  manual.toc  tutorial-compiler.aux  tutorial-compiler.out  tutorial-compiler.tex
examples/: C2C.pt  C2F.pt  CFG.pt  F2C.pt  IdentityTranslator.pt  Makefile  Makefile.am  Makefile.in  Parse.pt  Parse_2.pt  StringTranslator.pt  Transformation.out.save  Transformation.pt  Transformation_syntax.code  cfg.out  chfac.c.macro  chfac.c.save  chfac.f  compiler.input  compiler_1.pt  compiler_2.pt  compiler_3.pt  compiler_4.pt  compiler_5.pt  compiler_6.pt  compiler_input_1.code  compiler_input_2.code  compiler_input_3.code  compiler_input_4.code  compiler_output_2.save  compiler_output_3.save  compiler_output_4.save  compiler_output_5.save  compiler_output_6.save  dgemm.f.save  dgemm_orig.c  helloworld.pt  mgrid.f  opt_all.pt  opt_block.pt  (+14 more)
rose_connection/: Makefile.am  eval_ext_rose.cpp
rose_connection/manycore-stencil/: Makefile.am
src/: Makefile  Makefile.am  Makefile.in  codegen.cpp  driver.cpp  eval.cpp  evalOp.cpp  eval_ext.cpp  main.cpp  parse.cpp  poet_AST.cpp  poet_AST.h  poet_ASTeval.h  poet_ASTinterface.h  poet_ASTvisitor.h  poet_config.h  poet_lex.c  poet_lex.l  poet_yacc.c  poet_yacc.h  poet_yacc.output  poet_yacc.y  timing.h
src/.deps/: codegen.Po  driver.Po  eval.Po  evalOp.Po  eval_ext.Po  main.Po  parse.Po  poet_AST.Po  poet_lex.Po  poet_yacc.Po  timing.Po  tokenize.Po
test/libFunctions/: Makefile.am  input_defuse_arrayaccess.c  input_defuse_assign.c  input_get_set_extra_info.txt  test_collect_global_read_uop.pt  test_create_nodes.pt  test_defuse_arrayaccess.pt  test_defuse_assign.pt  test_get_set_extra_info.pt  test_global_modread.pt  test_substract_list.pt
test/parseC/: Makefile  Makefile.am  Makefile.in  jacobi7_4_opt.c  parseC.pt  poet_jacobi7_4_opt.c.save  poet_jacobi7_4_opt.out.save  poet_tri.c.save  poet_tri.out.save  tri.c
test/parseF/: Makefile  Makefile.am  Makefile.in  erlebacher.f  example1.f  example2.f  mgrid.f  parseF.pt  poet_example1.f.save  poet_example1.out.save  poet_example2.f.save  poet_example2.out.save  poet_mgrid.f.save  poet_mgrid.out.save  poet_swim.f.save  poet_swim.out.save  poet_tomcatv.f.save  poet_tomcatv.out.save  swim.f
test/parsePy/: Makefile  Makefile.am  Makefile.in  Transformation.pt  kmeans-ext-out.py  kmeans-ext.py  kmeans-out.py
test/timerGeneration/: Makefile  Makefile.am  Makefile.in  chfac.spec  dgemm.spec  gemm1.spec  gemm_timer_10_1_generic.c  gemm_timer_10_500_generic.c  gemm_timer_1_1_Pentium.c  gemm_timer_1_1_generic.c  gemm_timer_1_1_x86.c  gemv.spec  gemv_timer_1_100_generic.c  ger.spec  ger_timer_5_100_generic.c  specGeneration.pt  specification.code  specification.incl  testerCodeTemplates.code  testerGeneration.incl  testerGeneration.pt  timerCodeTemplates.code  timerGeneration.incl  timerGeneration.pt  trmm.spec
test/tune/: Makefile  Makefile.am  Makefile.in  dgemm.tune_save  dgemvT.pseat_save  dgemvT.tune_save  dger.tune_save  dgetrf.tune_save  gen_searchInfo.pt  search_spec.code  search_spec_pseat.code
tools/highlevel_interface/: Makefile  Makefile.am  Makefile.in  create_tables.pt  tables_generated.incl  xform_interactions.pt  xform_tools.incl  xforms2pt.pt
tools/highlevel_interface/code_files/: internal_map.code  poet_spec.code  table_info.code  xformList_spec.code
tools/matrixOpt/: MM_pat.code  Makefile  Makefile.am  Makefile.in  TODOLIST  matrixOpt-diff-orders.pt  matrixOpt.pt  out.c
tools/matrixOpt/testfiles/: daxpy.c  daxpy.c_save  dcopy.c  dcopy.c_save  dgemm.c  dgemm.c_save  dgemvN.c  dgemvN.c_save  dgemvT.c  dgemvT.c_save  dger.c  dger.c_save  driver.c  dscal.c  dscal.c_save  dswap.c  dswap.c_save  dsyr2k.c  dsyr2k.c_save  dsyrk.c  dsyrk.c_save  dtrmm_rl.c  dtrmm_rl.c_save  dtrmm_ru.c  dtrmm_ru.c_save  dtrmv.c  dtrmv.c_save  dtrsm_ll.c  dtrsm_ll.c_save  dtrsm_ru.c  dtrsm_ru.c_save  dtrsv.c  dtrsv.c_save  lufac.c  lufac.c_save  strsm.c  tester.c  trisolv.c  trisolv.c_save
tools/splash2Prof/: Makefile  Makefile.am  Makefile.in  patProf.pt  pattern.code
tools/splash2Prof/barnes/: gravsub.c  gravsub_prof.c
tools/splash2Prof/fmm/: interactions.c  interactions_prof.c
tools/splash2Prof/ocean_cp/: multi.c  multi_prof.c
tools/splash2Prof/ocean_ncp/: laplacalc.c  laplacalc_prof.c
tools/splash2Prof/raytrace/: husetup.c  husetup_prof.c
tools/splash2Prof/water_nsquared/: interf.c  interf_prof.c
tools/test_files/: .aaa.swo  Makefile  Makefile.am  Makefile.in  driver.c  tester.c
tools/test_files/input/: DistributeLoop1.c  DistributeLoop1.pt  DistributeLoop1.xs  DistributeLoop1_opt.c  DistributeLoop2.c  DistributeLoop2.pt  DistributeLoop2.xs  DistributeLoop3.c  DistributeLoop3.xs  DistributeLoop3_opt.c  Makefile  Makefile.am  Makefile.in  dgemm_1.c  dgemm_1.spec  dgemm_1.xs  dgemm_1_tester.c  dgemm_1_timer.c  dgemm_2.xs  dgemm_2_opt.c  dgemm_3.c  dgemm_3.pt  dgemm_3.xs  dgemm_3_opt.c  dgemm_3_tester.c  dgemvN.c  dgemvN.spec  dgemvN.xs  dgemvN_tester.c  dgemvN_timer.c  dgemvT.pt  dgemvT.xs  dgemvT_2.c  dgemvT_2.xs  dgemvT_opt.c  dger_2.c  dger_2.pt  dger_2.xs  dger_2_opt.c  jacobi7.pt  (+26 more)
tools/test_files/output/: DistributeLoop1_save.c  DistributeLoop2_save.c  DistributeLoop3_save.pt  Makefile  Makefile.am  Makefile.in  dgemm_1_save.c  dgemm_1_save.pt  dgemm_2_save.c  dgemm_2_save.pt  dgemm_3_save.c  dgemvN_save.c  dgemvN_save.pt  dgemvT_save.c  dger_2_save.c  jacobi7_2_save.c  jacobi7_3_save.c  jacobi7_4_save.c  jacobi7_4_save.pt  jacobi7_5_save.c  jacobi7_5_save.pt  vmult_1_save.c  vmult_1_save.pt  vmult_2_save.c
tools/test_files/splash2/barnes/: grav_inline.c  grav_inline.xs  grav_inline_opt.c  grav_inline_save.pt  grav_inlined.c  grav_inlined.xs  grav_inlined_opt.c  grav_inlined_save.c  grav_inlined_save.pt
tools/test_files/splash2/fmm/: interactions_dist.c  interactions_dist.xs  interactions_dist_opt.c  (+9 more)
(+799 files in other folders)
