
EXTRA_DIST=jacobi7_5.xs dgemm_1.c dgemvN.xs jacobi7_2.c vmult_1.xs dgemm_1.xs dgemvT.c jacobi7_2.xs vmult_2.c dgemm_2.c dgemvT.xs jacobi7_3.c vmult_2.xs dgemm_2.xs jacobi7.c jacobi7_3.xs vmult_orig.c dgemvN.c jacobi7.xs vmult_1.c DistributeLoop1.c DistributeLoop1.xs DistributeLoop2.c DistributeLoop2.xs DistributeLoop3.c DistributeLoop3.xs

clean:
	rm *.pt *_opt.c
